Completed the implementation and tests of OfferDetailService and OfferDetailServiceAdapter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,19 @@
+server.servlet.context-path=/merchant-offers
+
 spring.h2.console.enabled=true
+
+# Datasource
+spring.datasource.url=jdbc:h2:mem:offers
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
 
 # set specific time zone for JDBC driver
 hibernate.jdbc.time_zone=CET
+
+#setting to default locale
+spring.mvc.locale=en
+#force locale resolver to spring boot reconized your settings
+spring.mvc.locale-resolver=fixed
+
+logging.level.root=DEBUG
