Bug fix unit tests, added Dockerfile, completed the README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.servlet.context-path=/merchant-offers
 
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 
 # Datasource
 spring.datasource.url=jdbc:h2:mem:offers
@@ -16,4 +17,4 @@ spring.mvc.locale=en
 #force locale resolver to spring boot reconized your settings
 spring.mvc.locale-resolver=fixed
 
-logging.level.root=DEBUG
+logging.level.root=INFO
